--- a/templates/routines.html
+++ b/templates/routines.html
@@ -2,7 +2,7 @@
 <h2 class="title is-2">Routines</h2>
 <div class="content">
   <ul ng-repeat="routine in routines">
-    <li>When <strong> {{ routine.selectedOut }} </strong> is <strong>{{ routine.selectedOperation }}</strong> than <strong>{{ routine.selectedValue }}</strong> then execute <strong>{{ routine.selectedIn }}</strong></li>
+    <li>When <strong> {{ routine.selectedOutDooino }} </strong> is <strong>{{ mapOperation(routine.selectedOperation) }}</strong> than <strong>{{ routine.selectedValue }}</strong> then execute <strong>{{ routine.selectedIn }}</strong></li>
   </ul>
 </div>
 <div>
